--- a/Eduke/eduke/main/templates/parents/parent_chat.html
+++ b/Eduke/eduke/main/templates/parents/parent_chat.html
@@ -63,6 +63,12 @@
                   Your Teacher
                 </a>
               </li>
+              <li>
+                <a href="{% url 'parent_evaluation' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-square-poll-vertical"></i> &nbsp;
+                  Student Evaluation
+                </a>
+              </li>
               <li class="bg-gray-300 rounded-md">
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
