--- a/Eduke/eduke/main/templates/parents/parent_class.html
+++ b/Eduke/eduke/main/templates/parents/parent_class.html
@@ -64,6 +64,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_evaluation' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-square-poll-vertical"></i> &nbsp;
+                  Student Evaluation
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
