--- a/Eduke/eduke/main/templates/students/student_class.html
+++ b/Eduke/eduke/main/templates/students/student_class.html
@@ -58,6 +58,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Your Performance
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'student_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
