--- a/Eduke/eduke/main/templates/admin/admin_students.html
+++ b/Eduke/eduke/main/templates/admin/admin_students.html
@@ -179,45 +179,50 @@
             
                 <!-- Classes Section -->
                 <div class="bg-white p-4 rounded-md shadow">
-                    <h3 class="text-lg font-bold mb-4">Student</h3>
+                    <h3 class="text-lg font-bold mb-3">STUDENTS</h3>
                     
                     <!-- Classes Table -->
-                    <table class="min-w-full table-auto border-collapse mt-[30px]">
+                    <table class="w-full border-collapse rounded-xl overflow-hidden">
                         <thead>
-                            <tr class="bg-purple-600 text-white">
-                                <th class="p-3 border-b text-center mx-auto">Student Name</th>
-                                <th class="p-3 border-b text-center mx-auto">Roll No</th>
-                                <th class="p-3 border-b text-center mx-auto">Email</th>
-                                <th class="p-3 border-b text-center mx-auto">Class</th>
-                                <th class="p-3 border-b text-center mx-auto">Details</th>
-                                <th class="p-3 border-b text-center mx-auto">Actions</th>
+                            <tr class="bg-gray-800 text-white text-left">
+                                <th class="p-3 text-center">Student Name</th>
+                                <th class="p-3 text-center">Roll No</th>
+                                <th class="p-3 text-center">Email</th>
+                                <th class="p-3 text-center">Class</th>
+                                <th class="p-3 text-center">Details</th>
+                                <th class="p-3 text-center">Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="divide-y divide-gray-300">
                             {% for student in students %}
                             <tr data-student-id="{{ student.id }}">
                                 <form method="POST" action="{% url 'admin_student_edit' student.0 %}">
                                     {% csrf_token %}
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 student-name">
+                                    <td class="p-3 text-center student-name">
                                         <input type="text" name="name" value="{{ student.1 }}" class="hidden input-field p-2 rounded-md">
                                         <span class="display-field">{{ student.1 }}</span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 email">
+                                    <td class="p-3 text-center roll-no">
                                         <input type="text" name="roll_no" value="{{ student.2 }}" class="hidden input-field p-2 rounded-md">
                                         <span class="display-field">{{ student.2 }}</span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 roll-no">
+                                    <td class="p-3 text-center email">
                                         <input type="email" name="email" value="{{ student.3 }}" class="hidden input-field p-2 rounded-md">  
-                                        <span class="display-field">{{ student.3 }}</span>
+                                        <span class="display-field">
+                                            <a href="mailto:{{ student.3 }}" class="text-purple-700 hover:underline">{{ student.3 }}</a>
+                                        </span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
+                                    <td class="p-3 text-center">
                                         <span class="display-field class-name">{{ student.4 }}</span>
                                     </td>
 
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
-                                        <a href="{% url 'admin_student_detail' student.0 %}" class="text-gray-900 hover:underline">View</a>
+                                    <td class="p-3 text-center">
+                                        <a href="{% url 'admin_student_performance' student.0 %}" 
+                                            class="text-gray-900 hover:underline">
+                                            Profile
+                                        </a>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
+                                    <td class="p-3 text-center">
                                         <button type="button" class="edit-btn text-gray-900 hover:text-white border border-purple-600 hover:bg-purple-600 rounded-md px-2 py-1">
                                             <i class="fa-solid fa-pen-to-square"></i> &nbsp;Edit
                                         </button>
