--- a/Eduke/eduke/main/templates/admin/admin_subjects.html
+++ b/Eduke/eduke/main/templates/admin/admin_subjects.html
@@ -179,46 +179,46 @@
 
                 
                 <div class="bg-white p-4 rounded-md shadow">
-                    <h3 class="text-lg font-bold mb-4">Subjects</h3>
+                    <h3 class="text-lg font-bold mb-3">SUBJECTS</h3>
                     
                     <!-- Subjects Table -->
-                    <table class="min-w-full table-auto border-collapse mt-[30px]">
+                    <table class="w-full border-collapse rounded-xl overflow-hidden">
                         <thead>
-                            <tr class="bg-purple-600 text-white">
-                                <th class="p-3 border-b text-center mx-auto">Subject Name</th>
-                                <th class="p-3 border-b text-center mx-auto">Subject Head</th>
-                                <th class="p-3 border-b text-center mx-auto">Email</th>
-                                <th class="p-3 border-b text-center mx-auto">Class</th>
-                                <th class="p-3 border-b text-center mx-auto">Details</th>
-                                <th class="p-3 border-b text-center mx-auto">Actions</th>
+                            <tr class="bg-gray-800 text-white text-left">
+                                <th class="p-3 text-center">Subject Name</th>
+                                <th class="p-3 text-center">Subject Head</th>
+                                <th class="p-3 text-center">Email</th>
+                                <th class="p-3 text-center">Class</th>
+                                <th class="p-3 text-center">Details</th>
+                                <th class="p-3 text-center">Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="divide-y divide-gray-300">
                             {% for subject in subjects %}
                             <tr data-subject-id="{{ subject.id }}">
                                 <form method="POST" action="{% url 'admin_subject_edit' subject.0 %}">
                                     {% csrf_token %}
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 subject-name">
+                                    <td class="p-3 text-center subject-name">
                                         <input type="text" name="subject_name" value="{{ subject.1 }}" class="hidden input-field p-2 rounded-md">
                                         <span class="display-field">{{ subject.1 }}</span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 subject-head">
+                                    <td class="p-3 text-center subject-head">
                                         <input type="text" name="subject_head" value="{{ subject.2 }}" class="hidden input-field p-2 rounded-md">
                                         <span class="display-field">{{ subject.2 }}</span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200 email">
+                                    <td class="p-3 text-center email">
                                         <input type="email" name="email" value="{{ subject.3 }}" class="hidden input-field p-2 rounded-md">
-                                        <span class="display-field">{{ subject.3 }}</span>
+                                        <a href="mailto:{{ subject.3 }}" class="display-field text-purple-700 hover:underline">{{ subject.3 }}</a>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
+                                    <td class="p-3 text-center">
                                         <span>{{ subject.4 }}</span>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
+                                    <td class="p-3 text-center">
                                         <a href="{% url 'admin_subject_detail' subject.0 %}" class="text-gray-900 hover:underline">
                                             View
                                         </a>
                                     </td>
-                                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
+                                    <td class="p-3 text-center">
                                         <button type="button" class="edit-btn text-gray-900 hover:text-white border border-purple-600 hover:bg-purple-600 rounded-md px-2 py-1">
                                             <i class="fa-solid fa-pen-to-square"></i> &nbsp;Edit
                                         </button>
