--- a/Eduke/eduke/main/templates/class_head/class_head_class.html
+++ b/Eduke/eduke/main/templates/class_head/class_head_class.html
@@ -64,12 +64,6 @@
                 </a>
               </li>
               <li>
-                <a href="{% url 'class_head_subjects' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
-                  <i class="fa-solid fa-book"></i> &nbsp;
-                  Subjects
-                </a>
-              </li>
-              <li>
                 <a href="{% url 'class_head_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -204,7 +198,7 @@
 
             <div class="bg-white p-4 rounded-md shadow">
               <div class="flex items-center justify-between mb-4">
-                  <h3 class="text-lg font-bold">Subjects of {{ class_name }}</h3>
+                  <h3 class="text-lg font-bold">SUBJECTS OF {{ class_name }}</h3>
               </div>
 
               <!-- Displaying subjects as cards -->
@@ -213,10 +207,9 @@
                   <div class="bg-white border border-gray-300 p-4 rounded-lg shadow-lg">
                       <h4 class="text-xl font-bold text-purple-700 mb-2">{{ subject.subject_name }}</h4>
                       <p class="text-gray-600 text-[14px]">Subject Head: {{ subject.subject_head }}</p>
-                      <p class="text-gray-500 text-[14px]">Email: {{ subject.email }}</p>
-                      <div class="flex justify-between mt-4">
-                          <button type="button" class="text-gray-900 hover:text-white border border-purple-600 hover:bg-purple-600 rounded-md px-4 py-1">View</button>
-                      </div>
+                        <p class="text-gray-500 text-[14px]">Email: 
+                          <a href="mailto:{{ subject.email }}" class="text-purple-600 hover:underline">{{ subject.email }}</a>
+                        </p>
                   </div>
                   {% empty %}
                   <p class="text-center text-gray-500 col-span-full">No subjects available for this class.</p>
@@ -228,29 +221,33 @@
             <!-- Students Section -->
             <div class="bg-white p-4 rounded-md shadow">
                 <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold">Students of {{ class_name }}</h3>
+                    <h3 class="text-lg font-bold">STUDENTS OF {{ class_name }}</h3>
                     <p class="font-bold text-purple-700 mr-[20px]">Total Students: {{ student_count }}</p>
                 </div>
 
                 <!-- Students Table -->
-                <table class="min-w-full table-auto border-collapse mt-[30px]">
+                <table class="w-full border-collapse rounded-xl overflow-hidden">
                   <thead>
-                    <tr class="bg-[#4f0074] text-white">
-                      <th class="p-3 border-b text-center mx-auto">Roll No</th>
-                      <th class="p-3 border-b text-center mx-auto">Name</th>
-                      <th class="p-3 border-b text-center mx-auto">Class</th>
-                      <th class="p-3 border-b text-center mx-auto">Information</th>
+                    <tr class="bg-gray-800 text-white text-left">
+                      <th class="p-3 text-center">Roll No</th>
+                      <th class="p-3 text-center">Name</th>
+                      <th class="p-3 text-center">Email</th>
+                      <th class="p-3 text-center">Class</th>
+                      <th class="p-3 text-center">Information</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody class="divide-y divide-gray-300">
                     {% for student in students %}
                     <tr>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.roll_no }}</td>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.name }}</td>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ class_name }}</td>
+                      <td class="p-3 text-center">{{ student.roll_no }}</td>
+                      <td class="p-3 text-center">{{ student.name }}</td>
+                        <td class="p-3 text-center">
+                        <a href="mailto:{{ student.email }}" class="text-purple-700 hover:underline">{{ student.email }}</a>
+                        </td>
+                      <td class="p-3 text-center">{{ class_name }}</td>
 
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
-                        <a href="{% url 'class_head_student_profile' student.roll_no %}" 
+                      <td class="p-3 text-center">
+                        <a href="{% url 'class_head_student_performance' student.id %}" 
                           class="text-purple-600 hover:underline">
                           Profile
                         </a>
