--- a/Eduke/eduke/main/templates/class_head/class_head_students.html
+++ b/Eduke/eduke/main/templates/class_head/class_head_students.html
@@ -64,12 +64,6 @@
                 </a>
               </li>
               <li>
-                <a href="{% url 'class_head_subjects' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
-                  <i class="fa-solid fa-book"></i> &nbsp;
-                  Subjects
-                </a>
-              </li>
-              <li>
                 <a href="{% url 'class_head_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -104,52 +98,38 @@
           
             <!-- Teachers Section -->
             <div class="bg-white p-4 rounded-md shadow">
-                <h3 class="text-lg font-bold mb-4">ADD STUDENTS</h3>
-                
-                <form method="POST" action="">
-                  {% csrf_token %}
-                  <div class="mb-4 flex items-center space-x-4">
-                    <input type="text" name="roll_no" placeholder="Enter Student Roll No" class="px-4 py-2 border rounded-md">
-                    <input type="text" name="name" placeholder="Enter Student Name" class="px-4 py-2 border rounded-md">
-                    <button type="submit" class="bg-[#4f0074] hover:bg-violet-700 text-white px-4 py-2 rounded-md">
-                      <i class="fa-solid fa-plus"></i> Add Student
-                    </button>
-                  </div>
-                </form>
+                <h3 class="text-lg font-bold mb-4">STUDENTS</h3>  
 
                 <!-- Students Table -->
-                <table class="min-w-full table-auto border-collapse mt-[30px]">
+                <table class="w-full border-collapse rounded-xl overflow-hidden mt-[20px]">
                   <thead>
-                    <tr class="bg-[#4f0074] text-white">
-                      <th class="p-3 border-b text-center mx-auto">Roll No</th>
-                      <th class="p-3 border-b text-center mx-auto">Name</th>
-                      <th class="p-3 border-b text-center mx-auto">Class</th>
-                      <th class="p-3 border-b text-center mx-auto">Details</th>
-                      <th class="p-3 border-b text-center mx-auto">Actions</th>
+                    <tr class="bg-gray-800 text-white text-left">
+                      <th class="p-3 text-center">Roll No</th>
+                      <th class="p-3 text-center">Name</th>
+                      <th class="p-3 text-center">Email</th>
+                      <th class="p-3 text-center">Class</th>
+                      <th class="p-3 text-center">Details</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody class="divide-y divide-gray-300">
                     {% for student in students %}
                     <tr>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.roll_no }}</td>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.name }}</td>
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ class_name }}</td>
+                      <td class="p-3 text-center">{{ student.roll_no }}</td>
+                      <td class="p-3 text-center">{{ student.name }}</td>
+                      <td class="p-3 text-center">
+                      <a href="mailto:{{ student.email }}" class="text-purple-600 hover:underline">
+                        {{ student.email }}
+                      </a>
+                      </td>
+                      <td class="p-3 text-center">{{ class_name }}</td>
                       
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
-                        <a href="{% url 'class_head_student_profile' student.roll_no %}" 
+                      <td class="p-3 text-center">
+                        <a href="{% url 'class_head_student_performance' student.id %}" 
                           class="text-purple-600 hover:underline">
                           Profile
                         </a>
                       </td>
 
-                      <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">
-                        <button type="button" class="text-gray-900 hover:text-white border border-purple-600 hover:bg-purple-600 rounded-md px-2 py-1">
-                          <i class="fa-solid fa-pen-to-square"></i> &nbsp;Edit
-                        </button>
-                        <button type="button" class="text-red-700 hover:text-white border border-red-700 hover:bg-red-600 rounded-md px-2 py-1">
-                          <i class="fa-solid fa-trash-can"></i> &nbsp;Delete
-                        </button>
-                      </td>
                     </tr>
                     {% empty %}
                     <tr>
