--- a/Eduke/eduke/main/templates/parents/parent_chat.html
+++ b/Eduke/eduke/main/templates/parents/parent_chat.html
@@ -69,6 +69,12 @@
                   Student Evaluation
                 </a>
               </li>
+              <li>
+                <a href="{% url 'parent_student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Student Performance
+                </a>
+              </li>
               <li class="bg-gray-300 rounded-md">
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
