--- a/Eduke/eduke/main/templates/parents/parent_class.html
+++ b/Eduke/eduke/main/templates/parents/parent_class.html
@@ -70,6 +70,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Student Performance
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -114,10 +120,9 @@
                 <div class="bg-white border border-gray-300 p-4 rounded-lg shadow-lg">
                     <h4 class="text-xl font-bold text-purple-700 mb-2">{{ subject.0 }}</h4>
                     <p class="text-gray-600 text-[14px]">Subject Head: {{ subject.1 }}</p>
-                    <p class="text-gray-500 text-[14px]">Email: {{ subject.2 }}</p>
-                    <div class="flex justify-between mt-4">
-                        <button type="button" class="text-gray-900 hover:text-white border border-purple-600 hover:bg-purple-600 rounded-md px-4 py-1">View</button>
-                    </div>
+                    <p class="text-gray-500 text-[14px]">Email: 
+                      <a href="mailto:{{ subject.2 }}" class="text-purple-600 underline">{{ subject.2 }}</a>
+                    </p>
                 </div>
                 {% empty %}
                 <p class="text-center text-gray-500 col-span-full">No subjects available for this class.</p>
@@ -129,27 +134,29 @@
           <!-- Class Section -->
           <div class="bg-white p-4 rounded-md shadow">
               <div class="flex items-center justify-between mb-4">
-                  <h3 class="text-lg font-bold">Students of {{ student_class }}</h3>
+                  <h3 class="text-lg font-bold">STUDENTS OF {{ student_class }}</h3>
                   <p class="font-bold text-purple-700 mr-[20px]">Total Students: {{ student_count }}</p>
               </div>
 
               <!-- Students Table -->
-              <table class="min-w-full table-auto border-collapse mt-[30px]">
+              <table class="w-full border-collapse rounded-xl overflow-hidden">
                 <thead>
-                  <tr class="bg-[#4f0074] text-white">
-                    <th class="p-3 border-b text-center mx-auto">Roll No</th>
-                    <th class="p-3 border-b text-center mx-auto">Name</th>
-                    <th class="p-3 border-b text-center mx-auto">Class</th>
-                    <th class="p-3 border-b text-center mx-auto">Information</th>
+                  <tr class="bg-gray-800 text-white text-left">
+                    <th class="p-3 text-center">Roll No</th>
+                    <th class="p-3 text-center">Name</th>
+                    <th class="p-3 text-center">Class</th>
+                    <th class="p-3 text-center">Email</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody class="divide-y divide-gray-300">
                   {% for student in students %}
                   <tr>
-                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.0 }}</td>
-                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student.1 }}</td>
-                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">{{ student_class }}</td>
-                    <td class="px-4 py-2 text-center border-b-2 border-b-gray-300 bg-gray-200">Details</td>
+                    <td class="p-3 text-center">{{ student.0 }}</td>
+                    <td class="p-3 text-center">{{ student.1 }}</td>
+                    <td class="p-3 text-center">{{ student_class }}</td>
+                    <td class="p-3 text-center">
+                      <a href="mailto:{{ student.2 }}" class="text-purple-600 underline">{{ student.2 }}</a>
+                    </td>
                   </tr>
                   {% empty %}
                   <tr>
