--- a/Eduke/eduke/main/templates/parents/parent_dashboard.html
+++ b/Eduke/eduke/main/templates/parents/parent_dashboard.html
@@ -70,6 +70,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Student Performance
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -114,29 +120,29 @@
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/your_class.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
-            <a href="{% url 'parent_teacher_profile' %}" class="block relative group">
+            <a href="{% url 'parent_student_performance' %}" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">YOUR CHILD'S CLASS TEACHER</h3>
-                <p class="font-semibold text-purple-700 text-[20px]">{{ class_teacher }}</p>
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">YOUR CHILD'S PERFORMANCE</h3>
+                <p class="font-semibold text-purple-700 text-[20px]">{{ student_name }}</p>
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/subject.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
-            <a href="{% url 'parent_chat' %}" class="block relative group">
-              <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">EDUKE CHAT</h3>
-                <p class="font-semibold text-purple-700 text-[20px]">Communicate with other Eduke Users</p>
-              </div>
-              <!-- Cartoon PNG Image positioned at the bottom-right corner -->
-              <img src="{% static 'main/images/chat.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
-            </a>
-            <a href="" class="block relative group">
+            <a href="{% url 'parent_evaluation' %}" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
                 <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">EVALUATION</h3>
                 <p class="font-semibold text-purple-700 text-[20px]">Evaluate your Child</p>
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/eval.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
+            </a>
+            <a href="{% url 'parent_profile' %}" class="block relative group">
+              <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">SCORE PREDICTION</h3>
+                <p class="font-semibold text-purple-700 text-[20px]">View Score Predictions</p>
+              </div>
+              <!-- Cartoon PNG Image positioned at the bottom-right corner -->
+              <img src="{% static 'main/images/predict.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
             <a href="" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
@@ -146,13 +152,13 @@
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/bot.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
-            <a href="{% url 'parent_profile' %}" class="block relative group">
+            <a href="{% url 'parent_chat' %}" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">PROFILE</h3>
-                <p class="font-semibold text-purple-700 text-[20px]">View your Profile</p>
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">EDUKE CHAT</h3>
+                <p class="font-semibold text-purple-700 text-[20px]">Communicate with other Eduke Users</p>
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
-              <img src="{% static 'main/images/profile.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
+              <img src="{% static 'main/images/chat.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
           </div>
 
