--- a/Eduke/eduke/main/templates/parents/parent_teacher_profile.html
+++ b/Eduke/eduke/main/templates/parents/parent_teacher_profile.html
@@ -70,6 +70,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Student Performance
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
