--- a/Eduke/eduke/main/templates/students/student_chat.html
+++ b/Eduke/eduke/main/templates/students/student_chat.html
@@ -57,6 +57,12 @@
                   Your Class
                 </a>    
               </li>
+              <li>
+                <a href="{% url 'student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Your Performance
+                </a>
+              </li>
               <li  class="bg-gray-300 rounded-md">
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
