--- a/Eduke/eduke/main/templates/students/student_dashboard.html
+++ b/Eduke/eduke/main/templates/students/student_dashboard.html
@@ -58,6 +58,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chart-line"></i> &nbsp;
+                  Your Performance
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'student_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -104,13 +110,21 @@
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/your_class.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
-            <a href="{% url 'student_class' %}" class="block relative group">
+            <a href="{% url 'student_performance' %}" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">SUBJECTS</h3>
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">YOUR PERFORMANCE</h3>
                 <p class="font-semibold text-purple-700 text-[20px]">{{ subject_count }}</p>
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/subject.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
+            </a>
+            <a href="" class="block relative group">
+              <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">SCORE PREDICTION</h3>
+                <p class="font-semibold text-purple-700 text-[20px]">View Score Predictions</p>
+              </div>
+              <!-- Cartoon PNG Image positioned at the bottom-right corner -->
+              <img src="{% static 'main/images/predict.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
             <a href="{% url 'student_chat' %}" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
@@ -119,14 +133,6 @@
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
               <img src="{% static 'main/images/chat.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
-            </a>
-            <a href="" class="block relative group">
-              <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">EVALUATION</h3>
-                <p class="font-semibold text-purple-700 text-[20px]">View your Evaluation</p>
-              </div>
-              <!-- Cartoon PNG Image positioned at the bottom-right corner -->
-              <img src="{% static 'main/images/eval.png' %}" alt="Cartoon" class="absolute bottom-0 right-0 w-[150px] transform translate-x-4 translate-y-4 opacity-80 group-hover:opacity-100 transition-opacity duration-300" />
             </a>
             <a href="" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
