Completed Parent Chatbot

--- a/Eduke/eduke/main/templates/parents/parent_dashboard.html
+++ b/Eduke/eduke/main/templates/parents/parent_dashboard.html
@@ -76,6 +76,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_eduke_bot' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-robot"></i> &nbsp;
+                  Eduke Bot
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
@@ -146,7 +152,7 @@
             </a>
             <a href="" class="block relative group">
               <div class="bg-white p-6 rounded-lg shadow-lg pt-[15px] pl-[15px]">
-                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">CHATBOT</h3>
+                <h3 class="text-2xl font-bold text-gray-800 uppercase mb-[20px]">EDUKE BOT</h3>
                 <p class="font-semibold text-purple-700 text-[20px]">Interact with Chatbot</p>
               </div>
               <!-- Cartoon PNG Image positioned at the bottom-right corner -->
