--- a/Eduke/eduke/main/templates/login.html
+++ b/Eduke/eduke/main/templates/login.html
@@ -67,7 +67,7 @@
 
                 <div class="mt-8 text-[#190041]">
                     Don't have an account?
-                    <a class="font-medium text-indigo-600 underline" href="/register">Sign Up</a>
+                    <a class="font-medium text-indigo-600 underline" href="{% url 'institution_register' %}">Sign Up</a>
                 </div>
                 <div class="mt-4">
                     <a href="/" class="inline-block px-6 py-2 hover:underline text-[#190041]">
