--- a/Eduke/eduke/main/templates/parents/parent_chat.html
+++ b/Eduke/eduke/main/templates/parents/parent_chat.html
@@ -75,6 +75,12 @@
                   Student Performance
                 </a>
               </li>
+              <li>
+                <a href="{% url 'parent_eduke_bot' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-robot"></i> &nbsp;
+                  Eduke Bot
+                </a>
+              </li>
               <li class="bg-gray-300 rounded-md">
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
