--- a/Eduke/eduke/main/templates/parents/parent_evaluation.html
+++ b/Eduke/eduke/main/templates/parents/parent_evaluation.html
@@ -76,6 +76,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_eduke_bot' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-robot"></i> &nbsp;
+                  Eduke Bot
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-comments"></i> &nbsp;
                   Eduke Chat
