--- a/Eduke/eduke/main/templates/registration/institution_register.html
+++ b/Eduke/eduke/main/templates/registration/institution_register.html
@@ -64,7 +64,7 @@
 
                 <div class="mt-8 text-[#190041]">
                     Already have an account?
-                    <a class="font-medium text-indigo-600 underline" href="/login">Sign In</a>
+                    <a class="font-medium text-indigo-600 underline" href="{% url 'login' %}">Sign In</a>
                 </div>
                 <div class="mt-4">
                     <a href="/" class="inline-block px-6 py-2 hover:underline text-[#190041]">
